--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/search.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/search.js", "components/Map.js"],
   "exclude": ["node_modules"]
 }
